- more for() scope VC++ bug workaround.
- Don't try to compile demo.C on Windows as it required Geomview.
- Apply the full Delaunay test-suite to the hierarchy, this showed some bugs.
- Merge the two insert() functions in one, using a default argument for the
  starting cell.
- Finally update the traits to the last kernel, and documentation.

Version 1.49 (13 Apr 01)
- locate() interface changes to match the 2D case wrt the default start.
- minor hierarchy speed up.

Version 1.48 (13 Apr 01)
- for() scope VC++ bug workaround.
- facet circulator around an edge fix.

Version 1.47 (9 Apr 01)
- member template definition in class body for VC++.

Version 1.46 (3 Mar 01)
- violates() optimization (remove() speed up). [syl]
- new insert_conflict() in the TDS. [syl]
- rand4() can now be inline (locate() speed up). [syl]
- New internal typedef Conflict_set to allow later testing of hash_set<>. [syl]
- "int in_conflict_flag" in ds_cell to speed up insert(). [syl]
- Point_2 include and typedef removed from Triangulation_geom_traits_3.h [af]
- add dummy variable to cheat MSVC++
- added Delaunay__traingulation_3::fill_hole_3d_ear, an alternative
  implementation for fill_hole_3d [af]
- Use std::distance(). [syl]
- Triangulation_hierarchy<>.
- Remove some old style casts.
- Add a free cell list to speed up allocation.
- Various cleanups.

Version 1.45 (22 dec 00)
- point() of vertex_base returns a const ref instead of a Point. [syl]
- locate() improvements (remembering). [syl]
- new typdefs Geom_traits and Triangulation_data_structure.
- various cleanups.
- the kernel can almost be used as geometric traits class [andreas]
- function objects are created and applied directly. This means one less redirection [andreas]
- reintroduced the type Point in the traits class for backward compatibility [andreas]
- undo added so that the remove fails gracefully, instead of invalidating the triangulation [andreas]


Version 1.44 (11 dec 00)
- typdefs _3 fixed in demo and example